# sem7-LANSS-labs

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.c  main.c  run_tests.sh  server.c  server.sh
scripts/: build.sh  client.sh  run_tests.sh  server.sh
src/: CMakeLists.txt  commands.h  constants.h  main.c  server.c  server.h  system_dependent_code.c  system_dependent_code.h  types.h  util.c  util.h
src/client/: client.c  client.h
src/lib/: unistd.h
src/libs/: stdbool.h  unistd.h
src/server/: download_list.c  download_list.h  engine.c  engine.h  main.c  server.c  server.h  session_container.c  session_container.h
test/: CMakeLists.txt
test/server_tests/: CMakeLists.txt  server_test.c
